[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/git_for_godot/icons/NoCheck.svg" type="Texture" id=1]
[ext_resource path="res://addons/git_for_godot/icons/NoCheckHover.svg" type="Texture" id=2]
[ext_resource path="res://addons/git_for_godot/icons/MenuIdle.svg" type="Texture" id=3]
[ext_resource path="res://addons/git_for_godot/icons/MenuHover.svg" type="Texture" id=4]
[ext_resource path="res://addons/git_for_godot/docks/branch_dock/branch_item.gd" type="Script" id=5]

[node name="BranchItem" type="Control"]
margin_right = 200.0
margin_bottom = 28.0
rect_min_size = Vector2( 32, 28 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Checkout" type="TextureButton" parent="."]
anchor_bottom = 1.0
margin_right = 28.0
rect_min_size = Vector2( 28, 28 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 36.0
margin_top = 1.0
margin_right = -36.0
size_flags_horizontal = 3
text = "Branch name here"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -24.0
rect_min_size = Vector2( 20, 20 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupMenu" type="PopupMenu" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_right = 140.0
margin_bottom = 70.0
rect_min_size = Vector2( 140, 70 )
items = [ "Rename branch", null, 0, false, false, 0, 0, null, "", false, "Delete branch", null, 0, false, false, 1, 0, null, "", false, "Change upstream", null, 0, false, false, 2, 0, null, "", false ]
allow_search = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RenamePopup" type="ConfirmationDialog" parent="."]
margin_right = 200.0
margin_bottom = 70.0
window_title = "Rename Branch"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="LineEdit" parent="RenamePopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeletePopup" type="ConfirmationDialog" parent="."]
margin_right = 200.0
margin_bottom = 70.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpstreamPopup" type="ConfirmationDialog" parent="."]
margin_right = 317.0
margin_bottom = 86.0
rect_min_size = Vector2( 300, 80 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UpstreamPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UpstreamPopup/VBoxContainer"]
margin_right = 301.0
margin_bottom = 14.0
text = "Which remote branch should be the upstream?"

[node name="Upstream" type="HBoxContainer" parent="UpstreamPopup/VBoxContainer"]
margin_top = 18.0
margin_right = 301.0
margin_bottom = 42.0

[node name="Remote" type="OptionButton" parent="UpstreamPopup/VBoxContainer/Upstream"]
margin_right = 100.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )

[node name="Branch" type="LineEdit" parent="UpstreamPopup/VBoxContainer/Upstream"]
margin_left = 104.0
margin_right = 301.0
margin_bottom = 24.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Checkout" to="." method="_on_Checkout_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
[connection signal="id_pressed" from="PopupMenu" to="." method="_on_PopupMenu_id_pressed"]
[connection signal="confirmed" from="RenamePopup" to="." method="_on_RenamePopup_confirmed"]
[connection signal="confirmed" from="DeletePopup" to="." method="_on_DeletePopup_confirmed"]
[connection signal="confirmed" from="UpstreamPopup" to="." method="_on_UpstreamPopup_confirmed"]
